--- a/수정사항.md
+++ b/수정사항.md
@@ -1,3 +1,11 @@
+05/11 진행 상황
+===
+
+1. 건물 관리 추가 뷰 완성
+<img src="./src/main/resources/static/image/place-add-dataFormat.png" title="장소 추가"/>
+2. 추가 기능이 되어야 수정이 가능함.
+
+
 05/11 남은 작업
 ===
 
