경로테스트 끝

--- a/수정사항.md
+++ b/수정사항.md
@@ -1,3 +1,14 @@
+05/13
+===
+
+1. GetMapping으로 똑같은 URL이 묶여 있어서 오류 뜸 :: URL 수정함
+> org.springframework.beans.factory.BeanCreationException: Error creating bean with name 'requestMappingHandlerMapping' defined in class path resource [org/springframework/boot/autoconfigure/web/servlet/WebMvcAutoConfiguration$EnableWebMvcConfiguration.class]: Ambiguous mapping. Cannot map 'adminTestController' method
+com.f2z.gach.Map.Controller.AdminTestController#getTestRoute(Integer, Integer, Model)
+to {GET [/admin/map/test]}: There is already 'adminTestController' bean method
+com.f2z.gach.Map.Controller.AdminTestController#testPage(Model) mapped.
+> 
+2. pagination에서 reverse가 안먹고 있음. 나머지 기능은 잘 작동함(지점 관리, 경로 관리)
+
 05/11 진행 상황
 ===
 
