--- a/수정사항.md
+++ b/수정사항.md
@@ -1,3 +1,13 @@
+05/14
+===
+
+1. /event/add가 안들어가짐 코드를 추가함
+> Invalid property 'eventDTO' of bean class [com.f2z.gach.Event.DTO.AdminEventRequestDTO]: Bean property 'eventDTO' is not readable or has an invalid getter method: Does the return type of the getter match the parameter type of the setter?
+> > public AdminEventRequestDTO(Event event) {
+this.event = event;
+this.locations = new ArrayList<>();
+}
+
 05/13
 ===
 
